Restructure: D2C Revenue (7) followed by Enterprise (8), then Board Messaging (9)

--- a/index.html
+++ b/index.html
@@ -784,11 +784,11 @@
                     </div>
                 </section>
 
-                <!-- Section 7: Revenue Plan -->
+                <!-- Section 7: D2C Revenue Plan -->
                 <section class="content-section" data-section="7" id="section-7">
                     <div class="section-header">
                         <span class="section-number">7</span>
-                        <h2>Revenue Plan & Financial Model</h2>
+                        <h2>D2C Revenue Plan & Financial Model</h2>
                         <span class="section-status" data-status="pending">⏳ Pending</span>
                     </div>
                     <div class="section-body">
@@ -991,86 +991,10 @@
                     </div>
                 </section>
 
-                <!-- Section 8: Board Messaging -->
+                <!-- Section 8: Enterprise Strategy -->
                 <section class="content-section" data-section="8" id="section-8">
                     <div class="section-header">
                         <span class="section-number">8</span>
-                        <h2>Board Messaging: What We Tell Them Wednesday</h2>
-                        <span class="section-status" data-status="pending">⏳ Pending</span>
-                    </div>
-                    <div class="section-body">
-                        <h3>The Narrative</h3>
-                        <div class="narrative-box">
-                            <p class="narrative-text">"The market has evolved rapidly—GLP-1 players, telehealth expansion, CGM commoditization—and our growth slowed as we adapted. We've now repositioned ahead of where the market is going: a metabolic health platform with CGM as the intelligence layer, condition-specific funnels, and high-margin add-ons. Execution has already started—GLP-1 launches March. We're building the Growth Pod infrastructure to optimize the entire funnel. We expect $1,000+ blended LTV with 30% add-on attach by Q3."</p>
-                        </div>
-
-                        <h3>Key Messages</h3>
-                        <div class="message-cards">
-                            <div class="message-card">
-                                <span class="message-num">1</span>
-                                <div>
-                                    <h4>The Market Moved Fast—We're Evolving Faster</h4>
-                                    <p>Growth slowed because the market changed. GLP-1 explosion, telehealth commoditization, new CGM entrants. We've repositioned ahead of where the market is going.</p>
-                                </div>
-                            </div>
-                            <div class="message-card">
-                                <span class="message-num">2</span>
-                                <div>
-                                    <h4>We Have a Clear Strategy</h4>
-                                    <p>Two levers: Acquisition (vertical funnels) + Retention (add-ons). Growth Pod as nerve center. Team reorganized into pods with clear ownership.</p>
-                                </div>
-                            </div>
-                            <div class="message-card">
-                                <span class="message-num">3</span>
-                                <div>
-                                    <h4>Execution Has Already Started</h4>
-                                    <p>GLP-1 launches March 1. OpenLoop integration underway. Pod structure being implemented. Marketing intelligence dashboard in development.</p>
-                                </div>
-                            </div>
-                            <div class="message-card">
-                                <span class="message-num">4</span>
-                                <div>
-                                    <h4>The Ask (if any)</h4>
-                                    <p>TBD: Additional runway? Strategic guidance? Partnership introductions? Nothing?</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <h3>Anticipated Questions</h3>
-                        <ul class="qa-list">
-                            <li><strong>Q: Why did growth slow?</strong><br>A: The market evolved faster than we anticipated. GLP-1 players exploded, telehealth commoditized. We were positioned for the old market. We've now repositioned ahead of where the market is going.</li>
-                            <li><strong>Q: Why will this work when the current approach isn't?</strong><br>A: Specific funnels convert better than generic. Add-ons increase LTV. CGM as intelligence layer is our moat—no competitor has this.</li>
-                            <li><strong>Q: What if add-on attach rate is lower than 30%?</strong><br>A: We've modeled conservative scenarios. Even at 15%, we extend runway significantly. Our LTV is already at $900—we're closer than we've ever been.</li>
-                            <li><strong>Q: Can you execute with current team?</strong><br>A: Yes. 30 FTEs organized into clear pods. Growth Pod as nerve center. Execution has already started.</li>
-                        </ul>
-
-                        <div class="callout success">
-                            <p><strong>Goal for offsite:</strong> Leave Tuesday with the exact narrative and slides we'll present Wednesday. No ambiguity. One voice.</p>
-                        </div>
-                    </div>
-                    <div class="annotation-area">
-                        <div class="annotation-header">
-                            <span>💬 Your Feedback on This Section</span>
-                        </div>
-                        <div class="reaction-buttons">
-                            <button class="reaction-btn" data-reaction="agree">✅ Agree</button>
-                            <button class="reaction-btn" data-reaction="question">❓ Question</button>
-                            <button class="reaction-btn" data-reaction="concern">⚠️ Concern</button>
-                            <button class="reaction-btn" data-reaction="idea">💡 Idea</button>
-                        </div>
-                        <textarea class="comment-input" placeholder="Is this the right message for the board? What's missing?"></textarea>
-                        <div class="annotation-actions">
-                            <button class="btn-save-annotation">Save Annotation</button>
-                            <span class="save-status"></span>
-                        </div>
-                        <div class="existing-annotations"></div>
-                    </div>
-                </section>
-
-                <!-- Section 9: Enterprise Strategy -->
-                <section class="content-section" data-section="9" id="section-9">
-                    <div class="section-header">
-                        <span class="section-number">9</span>
                         <h2>Enterprise Strategy & B2B Revenue</h2>
                         <span class="section-status" data-status="pending">⏳ Pending</span>
                     </div>
@@ -1175,6 +1099,82 @@
                             <button class="reaction-btn" data-reaction="idea">💡 Idea</button>
                         </div>
                         <textarea class="comment-input" placeholder="What's your view on enterprise vs B2C resource allocation?"></textarea>
+                        <div class="annotation-actions">
+                            <button class="btn-save-annotation">Save Annotation</button>
+                            <span class="save-status"></span>
+                        </div>
+                        <div class="existing-annotations"></div>
+                    </div>
+                </section>
+
+                <!-- Section 9: Board Messaging -->
+                <section class="content-section" data-section="9" id="section-9">
+                    <div class="section-header">
+                        <span class="section-number">9</span>
+                        <h2>Board Messaging: What We Tell Them Wednesday</h2>
+                        <span class="section-status" data-status="pending">⏳ Pending</span>
+                    </div>
+                    <div class="section-body">
+                        <h3>The Narrative</h3>
+                        <div class="narrative-box">
+                            <p class="narrative-text">"The market has evolved rapidly—GLP-1 players, telehealth expansion, CGM commoditization—and our growth slowed as we adapted. We've now repositioned ahead of where the market is going: a metabolic health platform with CGM as the intelligence layer, condition-specific funnels, and high-margin add-ons. Execution has already started—GLP-1 launches March. We're building the Growth Pod infrastructure to optimize the entire funnel. We expect $1,000+ blended LTV with 30% add-on attach by Q3."</p>
+                        </div>
+
+                        <h3>Key Messages</h3>
+                        <div class="message-cards">
+                            <div class="message-card">
+                                <span class="message-num">1</span>
+                                <div>
+                                    <h4>The Market Moved Fast—We're Evolving Faster</h4>
+                                    <p>Growth slowed because the market changed. GLP-1 explosion, telehealth commoditization, new CGM entrants. We've repositioned ahead of where the market is going.</p>
+                                </div>
+                            </div>
+                            <div class="message-card">
+                                <span class="message-num">2</span>
+                                <div>
+                                    <h4>We Have a Clear Strategy</h4>
+                                    <p>Two levers: Acquisition (vertical funnels) + Retention (add-ons). Growth Pod as nerve center. Team reorganized into pods with clear ownership.</p>
+                                </div>
+                            </div>
+                            <div class="message-card">
+                                <span class="message-num">3</span>
+                                <div>
+                                    <h4>Execution Has Already Started</h4>
+                                    <p>GLP-1 launches March 1. OpenLoop integration underway. Pod structure being implemented. Marketing intelligence dashboard in development.</p>
+                                </div>
+                            </div>
+                            <div class="message-card">
+                                <span class="message-num">4</span>
+                                <div>
+                                    <h4>The Ask (if any)</h4>
+                                    <p>TBD: Additional runway? Strategic guidance? Partnership introductions? Nothing?</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h3>Anticipated Questions</h3>
+                        <ul class="qa-list">
+                            <li><strong>Q: Why did growth slow?</strong><br>A: The market evolved faster than we anticipated. GLP-1 players exploded, telehealth commoditized. We were positioned for the old market. We've now repositioned ahead of where the market is going.</li>
+                            <li><strong>Q: Why will this work when the current approach isn't?</strong><br>A: Specific funnels convert better than generic. Add-ons increase LTV. CGM as intelligence layer is our moat—no competitor has this.</li>
+                            <li><strong>Q: What if add-on attach rate is lower than 30%?</strong><br>A: We've modeled conservative scenarios. Even at 15%, we extend runway significantly. Our LTV is already at $900—we're closer than we've ever been.</li>
+                            <li><strong>Q: Can you execute with current team?</strong><br>A: Yes. 30 FTEs organized into clear pods. Growth Pod as nerve center. Execution has already started.</li>
+                        </ul>
+
+                        <div class="callout success">
+                            <p><strong>Goal for offsite:</strong> Leave Tuesday with the exact narrative and slides we'll present Wednesday. No ambiguity. One voice.</p>
+                        </div>
+                    </div>
+                    <div class="annotation-area">
+                        <div class="annotation-header">
+                            <span>💬 Your Feedback on This Section</span>
+                        </div>
+                        <div class="reaction-buttons">
+                            <button class="reaction-btn" data-reaction="agree">✅ Agree</button>
+                            <button class="reaction-btn" data-reaction="question">❓ Question</button>
+                            <button class="reaction-btn" data-reaction="concern">⚠️ Concern</button>
+                            <button class="reaction-btn" data-reaction="idea">💡 Idea</button>
+                        </div>
+                        <textarea class="comment-input" placeholder="Is this the right message for the board? What's missing?"></textarea>
                         <div class="annotation-actions">
                             <button class="btn-save-annotation">Save Annotation</button>
                             <span class="save-status"></span>
