Update Enterprise pod to 5 FTEs: Colin, Dave, Richard, Keriann, Carli

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                         <span class="section-status" data-status="pending">⏳ Pending</span>
                     </div>
                     <div class="section-body">
-                        <h3>Proposed Team Allocation (30 FTEs)</h3>
+                        <h3>Proposed Team Allocation (31 FTEs)</h3>
                         
                         <div class="team-table">
                             <div class="team-row header">
@@ -701,12 +701,12 @@
                             </div>
                             <div class="team-row">
                                 <span class="pod-label enterprise">💼 Enterprise</span>
-                                <span class="fte-count">4</span>
-                                <span>Sales, Customer Success, Implementation</span>
+                                <span class="fte-count">5</span>
+                                <span>Colin, Dave, Richard, Keriann, Carli</span>
                             </div>
                             <div class="team-row total">
                                 <span>Total FTEs</span>
-                                <span class="fte-count">30</span>
+                                <span class="fte-count">31</span>
                                 <span></span>
                             </div>
                         </div>
@@ -912,7 +912,7 @@
                                 <span>Notes</span>
                             </div>
                             <div class="econ-row" style="grid-template-columns: 1fr 100px 150px;">
-                                <span>👥 Headcount (30 FTEs)</span>
+                                <span>👥 Headcount (31 FTEs)</span>
                                 <span>$6.0M</span>
                                 <span>~$200K avg fully loaded</span>
                             </div>
@@ -1040,23 +1040,31 @@
                             </div>
                         </div>
 
-                        <h3>Enterprise Pod Focus (4 FTEs)</h3>
+                        <h3>Enterprise Pod Focus (5 FTEs)</h3>
                         <div class="economics-table">
-                            <div class="econ-row header" style="grid-template-columns: 120px 1fr;">
-                                <span>Role</span>
+                            <div class="econ-row header" style="grid-template-columns: 140px 1fr;">
+                                <span>Team Member</span>
                                 <span>Focus</span>
                             </div>
-                            <div class="econ-row" style="grid-template-columns: 120px 1fr;">
+                            <div class="econ-row" style="grid-template-columns: 140px 1fr;">
                                 <span>Colin Rogers (VP)</span>
                                 <span>Enterprise strategy, key accounts, partnership development</span>
                             </div>
-                            <div class="econ-row" style="grid-template-columns: 120px 1fr;">
-                                <span>Sales (2)</span>
-                                <span>Provider outreach, employer sales, proposal development</span>
+                            <div class="econ-row" style="grid-template-columns: 140px 1fr;">
+                                <span>Dave</span>
+                                <span>Provider outreach, healthcare sales</span>
                             </div>
-                            <div class="econ-row" style="grid-template-columns: 120px 1fr;">
-                                <span>Customer Success</span>
-                                <span>Implementation, account management, expansion</span>
+                            <div class="econ-row" style="grid-template-columns: 140px 1fr;">
+                                <span>Richard</span>
+                                <span>Employer sales, payer relationships</span>
+                            </div>
+                            <div class="econ-row" style="grid-template-columns: 140px 1fr;">
+                                <span>Keriann</span>
+                                <span>Customer success, implementation</span>
+                            </div>
+                            <div class="econ-row" style="grid-template-columns: 140px 1fr;">
+                                <span>Carli</span>
+                                <span>Account management, expansion</span>
                             </div>
                         </div>
 
@@ -1157,7 +1165,7 @@
                             <li><strong>Q: Why did growth slow?</strong><br>A: The market evolved faster than we anticipated. GLP-1 players exploded, telehealth commoditized. We were positioned for the old market. We've now repositioned ahead of where the market is going.</li>
                             <li><strong>Q: Why will this work when the current approach isn't?</strong><br>A: Specific funnels convert better than generic. Add-ons increase LTV. CGM as intelligence layer is our moat—no competitor has this.</li>
                             <li><strong>Q: What if add-on attach rate is lower than 30%?</strong><br>A: We've modeled conservative scenarios. Even at 15%, we extend runway significantly. Our LTV is already at $900—we're closer than we've ever been.</li>
-                            <li><strong>Q: Can you execute with current team?</strong><br>A: Yes. 30 FTEs organized into clear pods. Growth Pod as nerve center. Execution has already started.</li>
+                            <li><strong>Q: Can you execute with current team?</strong><br>A: Yes. 31 FTEs organized into clear pods. Growth Pod as nerve center. Execution has already started.</li>
                         </ul>
 
                         <div class="callout success">
