Update decisions: enable final decision input, save all inputs, add headcount changes decision

--- a/admin.html
+++ b/admin.html
@@ -852,7 +852,8 @@
             { id: 'glp1-launch', title: 'GLP-1 Launch Date', options: { 'march1': 'March 1 (aggressive)', 'march15': 'March 15 (buffer)', 'april1': 'April 1 (safe)' }},
             { id: 'enterprise-allocation', title: 'Enterprise vs D2C Focus', options: { 'maintain': 'Maintain (5 FTEs)', 'increase': 'Increase to 7', 'decrease': 'Reduce to 3' }},
             { id: 'attach-rate', title: 'Add-on Attach Rate Target', options: { '30': '30% by Q3', '20': '20% by Q3', '15': '15% by Q3' }},
-            { id: 'board-ask', title: 'Board Ask', options: { 'nothing': 'No ask - update only', 'runway': 'Request runway extension', 'strategic': 'Request strategic support' }}
+            { id: 'board-ask', title: 'Board Ask', options: { 'nothing': 'No ask - update only', 'runway': 'Request runway extension', 'strategic': 'Request strategic support' }},
+            { id: 'headcount-changes', title: 'Headcount Changes', options: { 'maintain': 'Maintain (optimize roles)', 'moderate': 'Moderate (5-10 positions)', 'significant': 'Significant (10+)' }}
         ];
         
         async function loadDecisionInputs() {
