--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-growth-pod" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-growth-pod" placeholder="Record your proposed decision here..."></textarea>
                                 </div>
                             </div>
 
@@ -1353,7 +1353,7 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-team-allocation" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-team-allocation" placeholder="Record your proposed decision here..."></textarea>
                                 </div>
                             </div>
 
@@ -1396,7 +1396,7 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-glp1-launch" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-glp1-launch" placeholder="Record your proposed decision here..."></textarea>
                                 </div>
                             </div>
 
@@ -1439,7 +1439,7 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-enterprise-allocation" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-enterprise-allocation" placeholder="Record your proposed decision here..."></textarea>
                                 </div>
                             </div>
 
@@ -1482,7 +1482,7 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-attach-rate" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-attach-rate" placeholder="Record your proposed decision here..."></textarea>
                                 </div>
                             </div>
 
@@ -1525,7 +1525,51 @@
                                 </div>
                                 <div class="decision-final">
                                     <h4>✅ Final Decision (to be made at offsite)</h4>
-                                    <textarea class="decision-textarea final" id="final-board-ask" placeholder="Decision will be recorded here during the offsite..." disabled></textarea>
+                                    <textarea class="decision-textarea final" id="final-board-ask" placeholder="Record your proposed decision here..."></textarea>
+                                </div>
+                            </div>
+
+                            <!-- Decision 7: Headcount Changes -->
+                            <div class="decision-card" data-decision="headcount-changes">
+                                <div class="decision-header">
+                                    <span class="decision-number">7</span>
+                                    <div class="decision-status" data-status="pending">⏳ Pending</div>
+                                </div>
+                                <h3 class="decision-question">What specific headcount changes do we need to make?</h3>
+                                <div class="decision-context">
+                                    <h4>📊 Context & Inputs</h4>
+                                    <ul>
+                                        <li>Current headcount: ~53 people (46 FTEs + 7 contractors)</li>
+                                        <li>Target structure: 31 FTEs per revenue plan</li>
+                                        <li>8 months runway - need to optimize burn</li>
+                                        <li>Critical roles needed for GLP-1 launch and growth</li>
+                                        <li>Consider: role changes, reductions, contractor conversions</li>
+                                    </ul>
+                                </div>
+                                <div class="decision-options">
+                                    <h4>🔀 Options</h4>
+                                    <div class="options-grid">
+                                        <label class="option-item">
+                                            <input type="radio" name="decision-headcount-changes" value="maintain">
+                                            <span><strong>A:</strong> Maintain current team (optimize roles only)</span>
+                                        </label>
+                                        <label class="option-item">
+                                            <input type="radio" name="decision-headcount-changes" value="moderate">
+                                            <span><strong>B:</strong> Moderate reduction (5-10 positions)</span>
+                                        </label>
+                                        <label class="option-item">
+                                            <input type="radio" name="decision-headcount-changes" value="significant">
+                                            <span><strong>C:</strong> Significant restructure (10+ positions)</span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="decision-input">
+                                    <h4>✏️ Your Input - Specific Names & Changes</h4>
+                                    <textarea class="decision-textarea" id="input-headcount-changes" placeholder="List specific employees and recommended changes (e.g., 'Move X to Y pod', 'Consider offboarding Z', 'Convert contractor A to FTE')..." style="min-height: 120px;"></textarea>
+                                </div>
+                                <div class="decision-final">
+                                    <h4>✅ Final Decision (to be made at offsite)</h4>
+                                    <textarea class="decision-textarea final" id="final-headcount-changes" placeholder="Record the agreed headcount changes here..." style="min-height: 120px;"></textarea>
                                 </div>
                             </div>
 
@@ -1537,7 +1581,7 @@
                         </div>
 
                         <div class="callout success" style="margin-top: 24px;">
-                            <p><strong>🎯 Goal:</strong> Come out of the offsite with clear decisions on all 6 items. Your inputs here will help drive the discussion.</p>
+                            <p><strong>🎯 Goal:</strong> Come out of the offsite with clear decisions on all 7 items. Your inputs here will help drive the discussion.</p>
                         </div>
                     </div>
                     <div class="annotation-area">
