Add sprint feedback saving/loading with persistent textareas

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                                 <textarea class="feedback-textarea" data-field="recommendations" placeholder="What changes would you make? How should we structure teams/pods going forward?" style="width: 100%; min-height: 80px; background: var(--bg-card); border: 1px solid var(--border-color); border-radius: 8px; padding: 12px; color: var(--text-primary); font-family: inherit; font-size: 14px;"></textarea>
                             </div>
                         </div>
+                        <div style="margin-top: 20px; text-align: center;">
+                            <button id="saveSprintFeedback" class="btn-save-annotation" style="padding: 12px 28px;">💾 Save Sprint Feedback</button>
+                            <span id="sprintFeedbackStatus" class="save-status"></span>
+                        </div>
 
                         <h3 style="margin-top: 24px;">Implications for Operating Structure</h3>
                         <p>What we learn from sprint execution should directly inform our pod structure, team allocation, and leadership decisions.</p>
